--- a/package.json
+++ b/package.json
@@ -8,23 +8,28 @@
   "license": "UNLICENSED",
   "private": true,
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/express": "^4.17.7",
-    "@types/jest": "^26.0.10",
+    "@types/jest": "^29.5.13",
     "@types/node": "^14.0.27",
     "@types/supertest": "^2.0.10",
-    "jest": "^26.3.0",
+    "jest": "^29.7.0",
     "jest-watch-typeahead": "^0.6.0",
     "nodemon": "^2.0.4",
     "supertest": "^4.0.2",
-    "ts-jest": "^26.2.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^8.10.2",
-    "typescript": "^3.9.7"
+    "typescript": "4.9.5"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "axios": "^1.7.7",
+    "express": "^4.17.1",
+    "husky": "^9.1.6"
   },
   "scripts": {
     "dev": "nodemon src/index.ts",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "prepare": "husky install",
+    "build": "tsc"
   }
 }
