--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
   },
   "scripts": {
     "dev": "nodemon src/index.ts",
-    "test": "jest --watch",
-    "prepare": "husky install",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "postinstall": "husky",
     "build": "tsc"
   }
 }
